<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Run For Life</string>
    <string name="app_decription">RunForLife™ is an revolutionary excerising application that builds around audio. Read the guide and start running!</string>
    <string name="action_log_in">Log in</string>
    <string name="action_history">History</string>
    <string name="action_highscores">Highscores</string>
    <string name="action_settings">Settings</string>
    <string name="action_delete">Delete</string>
    <string name="title_run">Run</string>
    <string name="title_map">Map</string>
    <string name="title_stats">Stats</string>
    <string name="title_activity_main">Run For Life</string>
    <string name="title_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="table_event">Event</string>
    <string name="table_time">Time</string>
    <string name="table_distance">Distance</string>
    <string name="table_pace">Pace</string>
    <string name="title_completedrun_list">Completed Runs</string>
    <string name="title_completedrun_detail">Completed Run Detail</string>
    <string name="image_desc_run">ImageView containing the Run for Life-header image</string>
    <string name="image_desc_gps">ImageView containing GPS image</string>
    <string name="image_desc_sound">ImageView containing sound image</string>
    <string name="image_desc_headphones">ImageView containing headphones image</string>
    <string name="button_desc_run">Run button</string>
    <string name="button_desc_pause">Pause button</string>
    <string name="button_desc_stop">Stop button</string>
    <string name="button_desc_finish">Finish button</string>
    <string name="swipe_desc"></string>
    <string name="run_button_text">NEXT</string>

    <string-array name="nav_drawer_array">
        <item>Main</item>
        <item>History</item>
        <item>Help</item>
    </string-array>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="title_activity_nav_drawer">NavDrawerActivity</string>
    <string name="title_activity_tutorial">Tutorial</string>

</resources>
