<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ebf0f7" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:weightSum="100" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="27"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/app_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center_horizontal"
                android:text="@string/app_name"
                android:textAllCaps="true"
                android:textColor="#36d67b"
                android:textSize="45sp" />

            <TextView
                android:id="@+id/app_desc"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingLeft="10sp"
                android:paddingRight="10sp"
                android:text="@string/app_decription"
                android:textColor="#1c1c1f"
                android:textSize="13sp"/>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="60" >

            <android.support.v4.view.ViewPager
                android:id="@+id/pager"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <ImageView
                android:id="@+id/previous_mode_image"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentLeft="true"
                android:layout_centerInParent="true"
                android:paddingLeft="10dp"
                android:src="@drawable/prev_mode"
                android:visibility="invisible" />

            <ImageView
                android:id="@+id/next_mode_image"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:paddingRight="10dp"
                android:src="@drawable/next_mode" />
        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="55dp"
        android:background="#1c1c1f"
        android:orientation="vertical"
        android:paddingBottom="13dp"
        android:paddingTop="13dp" 
        android:layout_alignParentBottom="true">

        <ImageView
            android:id="@+id/gps_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/image_desc_gps"
            android:src="@drawable/gps_disabled" />

        <ImageView
            android:id="@+id/headphones_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="-17dp"
            android:layout_toRightOf="@id/gps_icon"
            android:contentDescription="@string/image_desc_headphones"
            android:src="@drawable/headphones_disabled" />
    </RelativeLayout>

    <Button
        android:id="@+id/run_button"
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="-20dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/run_button"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/run_button_text"
        android:textColor="#FFFFFF"
        android:textSize="30sp" />

</RelativeLayout>